buka menu pengaturan hrusny login owner dlu order delivery,dsruh masukin alamat tapi buttonny ga ada setelah tutup kasir,hrusny pindah k page mpin,klo skrng lsng nampilin kas awal

--- a/app/src/main/res/layout/fragment_tambah_lokasi_dialog.xml
+++ b/app/src/main/res/layout/fragment_tambah_lokasi_dialog.xml
@@ -105,6 +105,7 @@
                 android:paddingLeft="@dimen/_10sdp"
                 android:paddingRight="@dimen/_5sdp"
                 android:textColor="@color/black"
+                android:drawableTint="@color/green_dark"
                 android:hint="Tanggal delivery"
                 android:drawableRight="@drawable/ic_laporan"
                 android:textColorHint="@color/green_dark"
@@ -130,6 +131,7 @@
                 android:paddingRight="@dimen/_5sdp"
                 android:textColor="@color/black"
                 android:hint="Waktu delivery"
+                android:drawableTint="@color/green_dark"
                 android:drawableRight="@drawable/ic_laporan"
                 android:textColorHint="@color/green_dark"
                 android:layout_marginBottom="@dimen/_10sdp"
