--- a/app/src/main/res/layout-land/dialog_ubah_stok.xml
+++ b/app/src/main/res/layout-land/dialog_ubah_stok.xml
@@ -134,6 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/jumlah"
+                    android:inputType="number"
                     android:imeOptions="flagNoExtractUi"/>
             </com.google.android.material.textfield.TextInputLayout>
 
