--- a/app/src/main/res/layout-sw600dp/dialog_ubah_stok.xml
+++ b/app/src/main/res/layout-sw600dp/dialog_ubah_stok.xml
@@ -132,6 +132,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_jumlah"
                     android:layout_width="match_parent"
+                    android:inputType="number"
                     android:layout_height="wrap_content"
                     android:hint="@string/jumlah"
                     android:imeOptions="flagNoExtractUi"/>
