--- a/app/src/main/res/layout/item_pengaturan_promo.xml
+++ b/app/src/main/res/layout/item_pengaturan_promo.xml
@@ -56,6 +56,14 @@
             android:layout_weight="1"
             android:text="@string/durasi"
             android:textColor="@color/black" />
+        <TextView
+            android:id="@+id/txt_dipakai"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:text="@string/durasi"
+            android:textColor="@color/black" />
     </LinearLayout>
 
     <View
